--- a/style8.css
+++ b/style8.css
@@ -4,6 +4,7 @@ body {
      background-image: url(back1.jpg);
     background-repeat: no-repeat;
     min-width: 1920px; 
+	zoom: 100%;
 }
 
 .container {
